--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<highcharts-chart 
-  [Highcharts]="Highcharts"
-
-  [constructorType]="chartConstructor"
-  [options]="chartOptions"
-  [callbackFunction]="chartCallback"
-
-  [(update)]="updateFlag"
-  [oneToOne]="oneToOneFlag"
-
-  style="width: 100%; height: 400px; display: block;"
-></highcharts-chart>
+<div style='width:90%;margin:0 auto'>
+    <ng-hcharts [options]='chartOptions'></ng-hcharts>
+</div>
